added todo cards

--- a/src/components/Page/index.css
+++ b/src/components/Page/index.css
@@ -23,3 +23,41 @@
     height: 100%;
     width: 70%;
 }
+
+#modal_body {
+    position: relative;
+    background: whitesmoke;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 15%;
+    margin-left: 35%;
+    margin-right: 35%;
+    padding: 15px;
+}
+
+#todo_text_field{
+    padding-bottom: 15px;
+    width: 200px;
+    display: flex;
+    margin-bottom: 5px;
+}
+
+#modal_chooser {
+    padding: 10px;
+}
+
+#todo_add_btn{
+}
+
+.todo_card{
+    display: flex;
+    margin: 10px;
+}
+
+.todo_card{
+    flex-direction: row;
+    display: inline-flex;
+}
